--- a/firebase.json
+++ b/firebase.json
@@ -27,16 +27,33 @@
         ]
       },
       {
-        "source": "/static/**",
+        "source": "/index.html",
         "headers": [
           {
+            "key": "Link",
+            "value": "</assets/main.jpg>; rel=preload; as=image;"
+          },
+          {
             "key": "Cache-Control",
-            "value": "max-age=31536000"
+            "value": "max-age=600"
           }
         ]
       },
       {
-        "source": "/img/**",
+        "source": "**/*.@(js|css|ico|map)",
+        "headers": [
+          {
+            "key": "Link",
+            "value": "</assets/main.jpg>; rel=preload; as=image;"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "max-age=600"
+          }
+        ]
+      },
+      {
+        "source": "/assets/**",
         "headers": [
           {
             "key": "Cache-Control",
