--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build --no-sw --no-prerender",
+    "build": "preact build --no-sw --no-prerender --no-inline-css",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --no-sw --no-prerender",
+    "dev": "preact watch --no-sw --no-prerender --no-inline-css",
     "lint": "eslint src"
   },
   "eslintConfig": {
