--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "preact build --no-sw --no-prerender --no-inline-css",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --no-sw --no-prerender --no-inline-css",
+    "dev": "preact watch --no-sw --no-prerender",
     "lint": "eslint src"
   },
   "eslintConfig": {
