--- a/firebase.json
+++ b/firebase.json
@@ -27,28 +27,11 @@
         ]
       },
       {
-        "source": "/index.html",
-        "headers": [
-          {
-            "key": "Link",
-            "value": "</assets/main.jpg>; rel=preload; as=image;"
-          },
-          {
-            "key": "Cache-Control",
-            "value": "max-age=600"
-          }
-        ]
-      },
-      {
         "source": "**/*.@(js|css|ico|map)",
         "headers": [
           {
-            "key": "Link",
-            "value": "</assets/main.jpg>; rel=preload; as=image;"
-          },
-          {
             "key": "Cache-Control",
-            "value": "max-age=600"
+            "value": "max-age=31536000"
           }
         ]
       },
