--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,7 @@
         "headers": [
           {
             "key": "Link",
-            "value": "</assets/main.jpg>; rel=preload; as=image;"
+            "value": "</assets/main.webp>; rel=preload; as=image;"
           },
           {
             "key": "Cache-Control",
